--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,6 +2,9 @@
 bin_PROGRAMS = superswitcher
 
 superswitcher_SOURCES = \
+  dbus-object.c \
+  dbus-object.h \
+  dbus-server-bindings.h \
   draganddrop.c \
   draganddrop.h \
   forward_declarations.h \
@@ -30,3 +33,9 @@ AM_CPPFLAGS = \
 AM_CFLAGS = @WARN_CFLAGS@
 
 LDADD = ${SUPERSWITCHER_LIBS}
+
+
+# Note that dbus-server-bindings.h was generated manually:
+# dbus-binding-tool --prefix=superswitcher --mode=glib-server dbus.xml > dbus-server-bindings.h
+# Really, it could be a Make rule, but for a one-off, we can live without the
+# dependency on dbus-binding-tool.
