* Added D-Bus service file.
git-svn-id: http://superswitcher.googlecode.com/svn/trunk@20 a151239e-a51d-0410-ae3d-21baef35e071

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -39,3 +39,7 @@ LDADD = ${SUPERSWITCHER_LIBS}
 # dbus-binding-tool --prefix=superswitcher --mode=glib-server dbus.xml > dbus-server-bindings.h
 # Really, it could be a Make rule, but for a one-off, we can live without the
 # dependency on dbus-binding-tool.
+
+
+DISTCLEANFILES = \
+	Makefile.in
