* First cut of window thumbnails (XComposite / XRender bling). * Now exits on unknown command line arguments.
git-svn-id: http://superswitcher.googlecode.com/svn/trunk@26 a151239e-a51d-0410-ae3d-21baef35e071

--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 # Initial blurb
 AC_PREREQ(2.52)
-AC_INIT(superswitcher, 0.5, http://code.google.com/p/superswitcher/)
+AC_INIT(superswitcher, 0.6, http://code.google.com/p/superswitcher/)
 AC_CONFIG_SRCDIR(src/superswitcher.c)
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 
@@ -74,6 +74,18 @@ else
 fi
 
 
+# XComposite, XRender etc. are similarly optional.
+if [$PKG_CONFIG --atleast-version 0.2 xcomposite] &&
+   [$PKG_CONFIG --atleast-version 0.6 xrender]; then
+  echo "Building with xcomposite and friends (xrender, etc.)."
+  SUPERSWITCHER_CFLAGS="$SUPERSWITCHER_CFLAGS `$PKG_CONFIG --cflags xcomposite xrender`"
+  SUPERSWITCHER_LIBS="$SUPERSWITCHER_LIBS `$PKG_CONFIG --libs xcomposite xrender`"
+  AC_DEFINE(HAVE_XCOMPOSITE, , [If we have xcomposite])
+else
+  echo "Building without xcomposite and friends (xrender, etc.)."
+fi
+
+
 # We would like to work on gtk+ 2.6 and libwnck 2.10.  This will need some
 # conditional compilation (i.e., #ifdef directives).
 if $PKG_CONFIG --atleast-version 2.8 gtk+-2.0; then
@@ -82,6 +94,7 @@ if $PKG_CONFIG --atleast-version 2.8 gtk+-2.0; then
 else
   echo "Building without gtk+ >= 2.8."
 fi
+
 
 if $PKG_CONFIG --atleast-version 2.12 libwnck-1.0; then
   echo "Building with libwnck >= 2.12."
